--- a/exploration.ipynb
+++ b/exploration.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
        "4         7252008       7317238                 1        7           2  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,6 +525,97 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(880, 64)\n",
+      "(64,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(session_hmog_vector.shape)\n",
+    "\n",
+    "t = np.std(session_hmog_vector, axis=0)\n",
+    "print(t.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.5        0.66666667 1.        ]\n",
+      " [2.         1.66666667 1.5       ]\n",
+      " [3.5        2.66666667 2.25      ]\n",
+      " [2.5        2.         1.75      ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Sample data\n",
+    "array = np.array([[1, 2, 4],\n",
+    "                  [4, 5, 6],\n",
+    "                  [7, 8, 9],\n",
+    "                  [5, 6, 7]])\n",
+    "vector = np.array([2, 3, 4])\n",
+    "\n",
+    "result = np.zeros_like(array, dtype=np.float64)\n",
+    "\n",
+    "for i in range(array.shape[1]):\n",
+    "    result[:, i] = array[:, i] / vector[i]\n",
+    "\n",
+    "\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We also need to scale obtained vectors\n",
+    "\n",
+    "def calc_std_and_scale(user_session_matrix):\n",
+    "    # matrix: (n_samples, n_features)\n",
+    "\n",
+    "    # (1, n_features)\n",
+    "    std_deviations_features = np.std(user_session_matrix, axis=0, dtype=np.float64)\n",
+    "\n",
+    "    return scale_by(user_session_matrix, std_deviations_features)\n",
+    "\n",
+    "def scale_by(user_session_matrix, std_deviation_vector):\n",
+    "    assert std_deviation_vector.shape[0] == user_session_matrix.shape[1]\n",
+    "\n",
+    "    result = np.zeros_like(user_session_matrix, dtype=np.float64)\n",
+    "\n",
+    "    for i in range(user_session_matrix.shape[1]):\n",
+    "        result[:, i] = user_session_matrix[:, i] / std_deviation_vector[i]\n",
+    "\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "session_hmog_vector = calc_std_and_scale(session_hmog_vector)\n",
+    "std_deviations = np.std(session_hmog_vector, axis=0, dtype=np.float64)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -535,7 +626,8 @@
     "param_grid = {\n",
     "    'nu': [0.01, 0.03, 0.05, 0.1, 0.15, 0.5],\n",
     "    'kernel': ['rbf'],\n",
-    "    'gamma': [2 ** -13, 2 ** -11, 2 ** -9, 2 ** -7, 2 ** -5, 2 ** -3, 2 ** -1, 2, 2 ** 3, 2 ** 5, 2 ** 7, 2 ** 9, 2 ** 11, 2 ** 13],\n",
+    "    # 'gamma': [2 ** -13, 2 ** -11, 2 ** -9, 2 ** -7, 2 ** -5, 2 ** -3, 2 ** -1, 2, 2 ** 3, 2 ** 5, 2 ** 7, 2 ** 9, 2 ** 11, 2 ** 13],\n",
+    "    'gamma': ['auto']\n",
     "}\n",
     "\n",
     "svm = OneClassSVM()\n",
@@ -550,14 +642,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best Parameters: {'gamma': 0.0001220703125, 'kernel': 'rbf', 'nu': 0.01}\n"
+      "Best Parameters: {'gamma': 'auto', 'kernel': 'rbf', 'nu': 0.01}\n"
      ]
     }
    ],
@@ -567,60 +659,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Let's test different authentication window lengths\n",
+    "# \"t = 20, 40, 60, 80, 100, 120 and 140 seconds.\"\n",
+    "\n",
+    "def test_hmog_window(session_map, sensors: list, dims: list, window_size_seconds: int, svm: OneClassSVM):\n",
+    "    predictions = []\n",
+    "\n",
+    "    PRESS_TYPE_DOWN = 1\n",
+    "    PRESS_TYPE_UP = 0\n",
+    "\n",
+    "    window_hmog_vectors = []\n",
+    "    curr_tap_hmog_vectors = []\n",
+    "\n",
+    "    first_window_timestamp = session_map['key_press_event'].iloc[0]['sys_time']\n",
+    "    curr_index = 0\n",
+    "\n",
+    "    while curr_index < len(session_map['key_press_event']) - 1:\n",
+    "        event = session_map['key_press_event'].iloc[curr_index]\n",
+    "        event_down_time = event['sys_time']\n",
+    "\n",
+    "        if event['press_type'] == PRESS_TYPE_DOWN:\n",
+    "            next_event = session_map['key_press_event'].iloc[curr_index + 1]\n",
+    "\n",
+    "            # Let's focus on cases when user lifts the finger before pressing another key\n",
+    "            if next_event['press_type'] != PRESS_TYPE_UP:\n",
+    "                curr_index += 1\n",
+    "                continue\n",
+    "            \n",
+    "            event_up_time = next_event['sys_time']\n",
+    "\n",
+    "            if (event_up_time - first_window_timestamp) / 1000 < window_size_seconds:\n",
+    "                for sensor in sensors:\n",
+    "                    for dim in dims:\n",
+    "                        tap_hmog_vector_x = extract_hmog_for_keypress(session_map[sensor], event_down_time, event_up_time, dim)\n",
+    "\n",
+    "                        curr_tap_hmog_vectors.extend(tap_hmog_vector_x)\n",
+    "                window_hmog_vectors.append(curr_tap_hmog_vectors.copy())\n",
+    "                curr_tap_hmog_vectors = []\n",
+    "            else:\n",
+    "                curr_tap_hmog_vectors = []\n",
+    "                # Let's process the window\n",
+    "\n",
+    "                window = np.array(window_hmog_vectors, dtype=np.float64)\n",
+    "                authentication_vector = np.mean(scale_by(window, std_deviations), axis=0)\n",
+    "\n",
+    "                predictions.append(svm.predict(authentication_vector.reshape(1, -1)))\n",
+    "\n",
+    "                first_window_timestamp = event_up_time\n",
+    "        \n",
+    "        curr_index += 1\n",
+    "    \n",
+    "    return predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preds = test_hmog_window(session_map, sensor_list, dims_list, 100, grid_search)\n",
+    "print(len(preds))\n",
+    "print(preds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 1  1  1  1  1  1  1  1  1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1\n",
-      " -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1\n",
-      " -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1\n",
-      " -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1\n",
-      " -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1\n",
-      " -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1\n",
-      " -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1  1 -1 -1 -1 -1 -1 -1\n",
-      " -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1\n",
-      " -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1\n",
-      " -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1\n",
-      " -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1\n",
-      " -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1  1  1  1  1  1  1\n",
-      "  1  1  1  1 -1  1  1  1  1  1  1  1  1  1  1  1  1 -1  1  1  1  1  1  1\n",
-      "  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1 -1  1  1 -1  1  1  1 -1  1\n",
-      "  1  1  1  1  1  1  1 -1  1 -1  1  1  1  1  1  1  1  1  1  1  1  1  1  1\n",
-      "  1  1 -1  1  1  1  1  1  1  1  1  1 -1  1  1  1  1  1  1  1  1  1 -1  1\n",
-      "  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1 -1 -1 -1 -1 -1 -1 -1 -1\n",
-      " -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1\n",
-      " -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1\n",
-      " -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1\n",
-      " -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1  1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1\n",
-      " -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1\n",
-      " -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1  1 -1 -1 -1 -1 -1 -1 -1 -1\n",
-      " -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1  1  1  1  1  1  1  1  1  1  1  1  1\n",
-      "  1  1  1 -1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1 -1  1  1  1\n",
-      "  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1\n",
-      "  1 -1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1 -1\n",
-      " -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1\n",
-      " -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1\n",
-      " -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1\n",
-      " -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1  1\n",
-      "  1  1  1  1  1  1  1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1\n",
-      " -1 -1 -1 -1 -1 -1 -1  1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1  1  1  1\n",
-      "  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1 -1  1  1  1  1  1\n",
-      "  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1\n",
-      "  1 -1  1  1  1  1  1  1 -1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1\n",
-      "  1  1 -1  1  1  1  1  1  1  1  1  1  1  1  1  1]\n"
+      "0.9443181818181818\n"
      ]
     }
    ],
    "source": [
-    "print(grid_search.predict(session_hmog_vector))"
+    "predictions = grid_search.predict(session_hmog_vector)\n",
+    "\n",
+    "vals, counts = np.unique(predictions, return_counts=True)\n",
+    "counts = dict(zip(vals, counts))\n",
+    "\n",
+    "accuracy = counts[1] / len(predictions)\n",
+    "print(accuracy)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -666,14 +798,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "avg100msBefore: 0.0519235415\n",
       "t_min: 1396656030497.0\n"
      ]
     },
@@ -732,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -907,7 +1038,7 @@
        "9  7.398083            0  8.513086  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -918,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
