[ml] first activity classification model

--- a/ml/data_preprocessing_activity_cls.ipynb
+++ b/ml/data_preprocessing_activity_cls.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-04-16T18:28:15.103315Z",
-     "start_time": "2024-04-16T18:28:15.100512Z"
+     "end_time": "2024-04-17T19:37:53.850923Z",
+     "start_time": "2024-04-17T19:37:53.846701Z"
     }
    },
    "source": [
@@ -16,13 +16,13 @@
     "dataset_path = 'hmog_public_dataset/'"
    ],
    "outputs": [],
-   "execution_count": 43
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-16T18:28:15.593530Z",
-     "start_time": "2024-04-16T18:28:15.504661Z"
+     "end_time": "2024-04-17T19:37:54.408444Z",
+     "start_time": "2024-04-17T19:37:54.329264Z"
     }
    },
    "cell_type": "code",
@@ -35,13 +35,13 @@
    ],
    "id": "480a75b697405214",
    "outputs": [],
-   "execution_count": 44
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-16T18:28:15.987524Z",
-     "start_time": "2024-04-16T18:28:15.985010Z"
+     "end_time": "2024-04-17T19:37:55.000943Z",
+     "start_time": "2024-04-17T19:37:54.997993Z"
     }
    },
    "cell_type": "code",
@@ -66,13 +66,13 @@
      ]
     }
    ],
-   "execution_count": 45
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-16T18:30:59.054022Z",
-     "start_time": "2024-04-16T18:30:58.932591Z"
+     "end_time": "2024-04-17T19:37:57.072338Z",
+     "start_time": "2024-04-17T19:37:56.963068Z"
     }
    },
    "cell_type": "code",
@@ -87,7 +87,7 @@
     "            session = session_hmog_matrices[subject][session_type][i]\n",
     "            \n",
     "            curr_label = 1 if session_type == 'w' else 0\n",
-    "            session = np.concatenate((session, np.full((session.shape[0], 1), curr_label)), axis=1)\n",
+    "            session = np.concatenate((session, np.full( (session.shape[0], 1), curr_label, dtype=np.int32) ), axis=1)\n",
     "            \n",
     "            hmog_vectors_with_labels_list.append(session)\n",
     "            print(hmog_vectors_with_labels_list[-1].shape)\n",
@@ -840,7 +840,7 @@
      ]
     }
    ],
-   "execution_count": 48
+   "execution_count": 10
   },
   {
    "metadata": {},
@@ -851,8 +851,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-16T18:31:12.974407Z",
-     "start_time": "2024-04-16T18:31:12.971183Z"
+     "end_time": "2024-04-17T19:37:59.431766Z",
+     "start_time": "2024-04-17T19:37:59.428114Z"
     }
    },
    "cell_type": "code",
@@ -865,12 +865,37 @@
        "(521872, 66)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 50
+   "execution_count": 11
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-17T19:38:01.834499Z",
+     "start_time": "2024-04-17T19:38:01.782681Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Let's save it\n",
+    "\n",
+    "np.save('preprocessed_data/hmog_vectors_with_labels', hmog_vectors_with_labels)"
+   ],
+   "id": "2acf69b1042cce69",
+   "outputs": [],
+   "execution_count": 12
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "aed043838bc53029"
   }
  ],
  "metadata": {
